--- a/src/app/pages/button-link/button-link.component.html
+++ b/src/app/pages/button-link/button-link.component.html
@@ -3,10 +3,23 @@
   </div>
   <div class="_container main-detail">
     <div class="ka-component _620">
-      <h1 class="_text-center">Buttons</h1>
+      <h1 class="_text-center">Buttons and Link</h1>
       <p>
-        Documentation and examples for Bootstrap typography, including global settings, headings, body text, lists, and more.
+        Documentation and <a href="">examples</a> for Bootstrap typography, including global settings, headings, body text, lists, and more.
       </p>
+    </div>
+    <div class="ka-component _620">
+      <h2 class="">Link {{ww}}</h2>
+      <p>
+        Documentation and examples typography, headings, body text, lists, and more.
+      </p>
+    </div>
+    <div class="ka-component ka-example">
+      <div class="ex-code">
+        <a href="" class="">Primary</a>
+        <a href="" class="">Secondary</a>
+        <a href="" class="">Defualf</a>
+      </div>
     </div>
     <div class="ka-component _620">
       <h2 class="">Buttons</h2>
@@ -34,6 +47,15 @@
         <ka-button type='_secondary-outline'>Secondary</ka-button>
         <ka-button type='_defualf-outline'>Defualf</ka-button>
         <ka-button type='_link'>Link</ka-button>
+        <br><br>
+        <ka-button type='_primary-outline-2'>Primary</ka-button>
+        <ka-button type='_secondary-outline-2'>Secondary</ka-button>
+        <ka-button type='_defualf-outline-2'>Defualf</ka-button>
+        <br><br>
+        <ka-button type='_primary-outline-bg'>Primary</ka-button>
+        <ka-button type='_secondary-outline-bg'>Secondary</ka-button>
+        <ka-button type='_defualf-outline-bg'>Defualf</ka-button>
+        
       </div>
     </div>
     <div class="ka-component _620">
