--- a/src/app/pages/dropdown/dropdown.component.html
+++ b/src/app/pages/dropdown/dropdown.component.html
@@ -18,7 +18,7 @@
       <div class="ex-code">
         <div class="row">
           <div class="column">
-            <ka-dropdown style="" [model]=""></ka-dropdown>
+            <ka-dropdown kaStyle="_secondary-outline" [model]=""></ka-dropdown>
           </div>
         </div>
       </div>
