--- a/src/assets/scss/components/menu.scss
+++ b/src/assets/scss/components/menu.scss
@@ -1,12 +1,10 @@
 .ka-menu {
-    min-width: rem(220);
-
-    .title {
-        
+  min-width: rem(220);
+  .title {}
+  li {
+    a {
+      display: block;
+      padding: rem(8) rem(12);
     }
-    li {
-        a {
-            padding: rem(8) rem(12);
-        }
-    }
+  }
 }
