--- a/src/app/component/ka-dropdown/ka-dropdown.component.html
+++ b/src/app/component/ka-dropdown/ka-dropdown.component.html
@@ -1,5 +1,5 @@
-<div class="ka-dropdown">
-  <button class="ka-button _block" [ngClass]="kaStyle" dropdown>
+<div class="ka-dropdown" dropdown>
+  <button class="ka-button _block " [ngClass]="kaStyle">
     Dropdown
   </button>
   <ul class="list">
