--- a/src/app/pages/button-link/button-link.component.html
+++ b/src/app/pages/button-link/button-link.component.html
@@ -9,7 +9,7 @@
       </p>
     </div>
     <div class="ka-component _620">
-      <h2 class="">Link {{ww}}</h2>
+      <h2 class="">Link</h2>
       <p>
         Documentation and examples typography, headings, body text, lists, and more.
       </p>
