update code add dropdown

--- a/src/app/pages/dropdown/dropdown.component.html
+++ b/src/app/pages/dropdown/dropdown.component.html
@@ -20,6 +20,9 @@
           <div class="column">
             <ka-dropdown kaStyle="_secondary-outline" [model]=""></ka-dropdown>
           </div>
+          <div class="column">
+            <ka-dropdown kaStyle="_secondary-outline" [model]=""></ka-dropdown>
+          </div>
         </div>
       </div>
     </div>
