--- a/src/assets/scss/components/forms.scss
+++ b/src/assets/scss/components/forms.scss
@@ -154,3 +154,37 @@
     }
   }
 }
+
+.ka-form._select {
+  position: relative;
+  label {
+    font-size: rem(18);
+    position: absolute;
+    top: rem(12);
+    left: rem(8);
+    color: $dark-30;
+    transition: all 0.1s;
+    z-index: 1;
+    &._valid {
+      font-size: rem(13);
+      top: rem(4);
+      color: $dark-70;
+    }
+  }
+  select {
+    position: relative;
+    background: #fff !important;
+    display: block;
+    width: 100%;
+    border-radius: rem(3);
+    font-size: rem(16);
+    height: rem(48);
+    padding: rem(16) rem(8) rem(4) rem(8);
+    border: rem(1) solid $secondary-30;
+    &:focus,
+    &:active {
+      border: rem(1) solid $primary-70;
+      box-shadow: 0 0 0 rem(3) $primary-30;
+    }
+  }
+}
