--- a/src/app/pages/forms/forms.component.html
+++ b/src/app/pages/forms/forms.component.html
@@ -99,7 +99,7 @@
         <div class="row">
           <div class="column">
             <div class="ka-form _select">
-              <ka-select title="Select your type" [model]="models.type" [optionList]="selectList"></ka-select>
+              <ka-select title="Select your type" [model]="model.type" [optionList]="selectList"></ka-select>
             </div>
           </div>
         </div>
